feat: Add website layout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,49 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <!-- header -->
+    <div>
+        <!-- heading & title -->
+        <div>
+            <!-- title -->
+            <div></div>
+        </div>
+        <!-- profile -->
+        <div>
+            <!-- social links -->
+            <div></div>
+            <!-- profile pic -->
+            <div></div>
+        </div>
+    </div>
+    <!-- body -->
+    <div>
+        <!-- introduction -->
+        <div>
+            <!-- intro-heading -->
+            <div></div>
+            <!-- bio -->
+            <div></div>
+            <!-- arrow-towards-next-section -->
+            <div></div>
+        </div>
+        <!-- qualifications -->
+        <div></div>
+    </div>
+    <!-- projects-showcase -->
+    <div>
+        <!-- section-title -->
+        <div></div>
+        <!-- projects -->
+        <div></div>
+    </div>
+    <!-- footer -->
+    <div>
+        <!-- mail -->
+        <div></div>
+        <!-- copyright -->
+        <div></div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
