--- a/index.html
+++ b/index.html
@@ -7,24 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Debarghya's</title>
 </head>
 
 <body>
     <!-- header -->
-    <div>
-        <!-- heading & title -->
-        <div>
-            <!-- title -->
-            <div></div>
+    <div class="container">
+        <div class="row">
+            <!-- heading & title -->
+            <div class="col">
+                <!-- title -->
+                <div>Debarghya Chaudhury</div>
+            </div>
+            <!-- profile -->
+            <div class="col">
+                <div class="row justify-content-end">
+                    <!-- social links -->
+                    <div class="col-3">
+                        <i class="fab fa-github"></i>
+                    </div>
+                    <div class="col-3">
+                        <i class="fab fa-linkedin"></i>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <!-- profile pic -->
+                    <div class="col-6 offset-6">
+                        <img src="https://via.placeholder.com/200" alt="profile picture of Debarghya Chaudhury">
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- profile -->
-        <div>
-            <!-- social links -->
-            <div></div>
-            <!-- profile pic -->
-            <div></div>
-        </div>
+
     </div>
     <!-- body -->
     <div>
