feat: Add bootstrap layout for body content and projects section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Debarghya's</title>
 </head>
 
@@ -20,7 +21,7 @@
             <!-- heading & title -->
             <div class="col">
                 <!-- title -->
-                <div>Debarghya Chaudhury</div>
+                <div class="display-5">Debarghya Chaudhury</div>
             </div>
             <!-- profile -->
             <div class="col">
@@ -34,36 +35,68 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row justify-content-end">
                     <!-- profile pic -->
-                    <div class="col-6 offset-6">
-                        <img src="https://via.placeholder.com/200" alt="profile picture of Debarghya Chaudhury">
+                    <div class="col-6">
+                        <img src="https://via.placeholder.com/200" alt="profile picture of Debarghya Chaudhury"
+                            class="profile-pic">
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
     <!-- body -->
-    <div>
-        <!-- introduction -->
-        <div>
-            <!-- intro-heading -->
-            <div></div>
-            <!-- bio -->
-            <div></div>
-            <!-- arrow-towards-next-section -->
-            <div></div>
+    <div class="container">
+        <div class="row">
+            <!-- introduction -->
+            <div class="col">
+                <!-- intro-heading -->
+                <div class="display-1">Hi!</div>
+                <!-- bio -->
+                <div class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Augue neque gravida in fermentum et sollicitudin ac. Volutpat commodo sed
+                    egestas egestas. Gravida neque convallis a cras semper auctor neque vitae tempus. Odio pellentesque
+                    diam volutpat commodo sed egestas egestas. Mauris cursus mattis molestie a iaculis at erat
+                    pellentesque adipiscing.</div>
+                <!-- arrow-towards-next-section -->
+                <div class="text-end">
+                    <img src="https://via.placeholder.com/150" alt="arrow towards next section">
+                </div>
+            </div>
+            <!-- qualifications -->
+            <div class="col">
+                <div class="row justify-content-end">
+                    <div class="col-6 lead">Web Dev</div>
+                </div>
+                <div class="row justify-content-end">
+                    <div class="col-6 lead">@Deloitte</div>
+                </div>
+            </div>
         </div>
-        <!-- qualifications -->
-        <div></div>
     </div>
     <!-- projects-showcase -->
-    <div>
+    <div class="container">
         <!-- section-title -->
-        <div></div>
+        <div class="row">
+            <div class="col">
+                <div class="display-6 text-center">Projects</div>
+            </div>
+        </div>
         <!-- projects -->
-        <div></div>
+        <div class="row justify-content-center">
+            <div class="col text-center">
+                <img src="https://via.placeholder.com/70" alt="Project thumbnail">
+            </div>
+            <div class="col text-center">
+                <img src="https://via.placeholder.com/70" alt="Project thumbnail">
+            </div>
+            <div class="col text-center">
+                <img src="https://via.placeholder.com/70" alt="Project thumbnail">
+            </div>
+            <div class="col text-center">
+                <img src="https://via.placeholder.com/70" alt="Project thumbnail">
+            </div>
+        </div>
     </div>
     <!-- footer -->
     <div>
