feat: Add bootstrap layout for footer

--- a/index.html
+++ b/index.html
@@ -86,24 +86,35 @@
         <div class="row justify-content-center">
             <div class="col text-center">
                 <img src="https://via.placeholder.com/70" alt="Project thumbnail">
+                <div>Project-x</div>
             </div>
             <div class="col text-center">
                 <img src="https://via.placeholder.com/70" alt="Project thumbnail">
+                <div>Project-x</div>
             </div>
             <div class="col text-center">
                 <img src="https://via.placeholder.com/70" alt="Project thumbnail">
+                <div>Project-x</div>
             </div>
             <div class="col text-center">
                 <img src="https://via.placeholder.com/70" alt="Project thumbnail">
+                <div>Project-x</div>
             </div>
         </div>
     </div>
     <!-- footer -->
-    <div>
+    <div class="container">
         <!-- mail -->
-        <div></div>
+        <div class="row justify-content-end">
+            <div class="col-3">
+                <i class="fas fa-envelope"></i>
+            </div>
+            <div class="col-3 display-6">Contact Me!</div>
+        </div>
         <!-- copyright -->
-        <div></div>
+        <div class="row justify-content-end">
+            <div class="col-4">Copyright &copy; 2021 - Debarghya Chaudhury &reg;</div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
