feat: Change company name

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="col-6 lead">Web Dev</div>
                 </div>
                 <div class="row justify-content-end">
-                    <div class="col-6 lead">@Deloitte</div>
+                    <div class="col-6 lead">@Company</div>
                 </div>
             </div>
         </div>
