--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- header -->
     <div class="container">
-        <div class="row">
+        <div class="row header">
             <!-- heading & title -->
             <div class="col">
                 <!-- title -->
@@ -35,7 +35,7 @@
                     </div>
                 </div>
 
-                <div class="row justify-content-end">
+                <div class="row justify-content-end mt-5">
                     <!-- profile pic -->
                     <div class="col-6">
                         <img src="https://via.placeholder.com/200" alt="profile picture of Debarghya Chaudhury"
