feat: Adjust title layout for the header

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 <body>
     <!-- header -->
     <div class="container">
-        <div class="row header">
+        <div class="row header pt-2">
             <!-- heading & title -->
-            <div class="col">
+            <div class="col display-5">
                 <!-- title -->
-                <div class="display-5">Debarghya Chaudhury</div>
+                <div class="row">Debarghya</div>
+                <div class="row">Chaudhury</div>
             </div>
             <!-- profile -->
             <div class="col">
@@ -51,9 +52,10 @@
             <!-- introduction -->
             <div class="col">
                 <!-- intro-heading -->
-                <div class="display-1">Hi!</div>
+                <div class="display-1 text-center">Hi!</div>
                 <!-- bio -->
-                <div class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                <div class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore
                     et dolore magna aliqua. Augue neque gravida in fermentum et sollicitudin ac. Volutpat commodo sed
                     egestas egestas. Gravida neque convallis a cras semper auctor neque vitae tempus. Odio pellentesque
                     diam volutpat commodo sed egestas egestas. Mauris cursus mattis molestie a iaculis at erat
