--- a/index.html
+++ b/index.html
@@ -21,18 +21,25 @@
             <!-- heading & title -->
             <div class="col display-5">
                 <!-- title -->
-                <div class="row">Debarghya</div>
-                <div class="row">Chaudhury</div>
+                <div class="row">
+                    <div class="col">Debarghya</div>
+                </div>
+                <div class="row">
+                    <div class="col">Chaudhury</div>
+                </div>
             </div>
             <!-- profile -->
             <div class="col">
                 <div class="row justify-content-end">
                     <!-- social links -->
-                    <div class="col-3">
+                    <div class="col-2">
                         <i class="fab fa-github"></i>
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                         <i class="fab fa-linkedin"></i>
+                    </div>
+                    <div class="col-2">
+                        <i class="fas fa-envelope"></i>
                     </div>
                 </div>
 
@@ -52,7 +59,7 @@
             <!-- introduction -->
             <div class="col">
                 <!-- intro-heading -->
-                <div class="display-1 text-center">Hi!</div>
+                <div class="display-1">Hi!</div>
                 <!-- bio -->
                 <div class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore
@@ -81,7 +88,7 @@
         <!-- section-title -->
         <div class="row">
             <div class="col">
-                <div class="display-6 text-center">Projects</div>
+                <div class="display-5 text-center mb-5">Projects</div>
             </div>
         </div>
         <!-- projects -->
@@ -107,15 +114,10 @@
     <!-- footer -->
     <div class="container">
         <!-- mail -->
-        <div class="row justify-content-end">
-            <div class="col-3">
-                <i class="fas fa-envelope"></i>
-            </div>
-            <div class="col-3 display-6">Contact Me!</div>
-        </div>
+        
         <!-- copyright -->
-        <div class="row justify-content-end">
-            <div class="col-4">Copyright &copy; 2021 - Debarghya Chaudhury &reg;</div>
+        <div class="row align-items-end footer">
+            <div class="col text-end pb-3">Copyright &copy; 2021 - Debarghya Chaudhury &reg;</div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
