feat: Add arrow towards the Projects section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     pellentesque adipiscing.</div>
                 <!-- arrow-towards-next-section -->
                 <div class="text-end">
-                    <img src="https://via.placeholder.com/150" alt="arrow towards next section">
+                    <img src="img/arrow.png" alt="arrow towards next section" class="img-fluid arrow pt-3">
                 </div>
             </div>
             <!-- qualifications -->
@@ -87,8 +87,8 @@
     <div class="container">
         <!-- section-title -->
         <div class="row">
-            <div class="col">
-                <div class="display-5 text-center mb-5">Projects</div>
+            <div class="col-6 offset-6">
+                <div class="display-5 mb-5">Projects</div>
             </div>
         </div>
         <!-- projects -->
