--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
             </div>
         </div>
     </div>
+    <div class="header-background">
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="500 30 440 320" class="header-background-waves">
+        <path fill="#ffffff" fill-opacity="1"
+            d="M0,160L26.7,176C53.3,192,107,224,160,245.3C213.3,267,267,277,320,282.7C373.3,288,427,288,480,288C533.3,288,587,288,640,250.7C693.3,213,747,139,800,122.7C853.3,107,907,149,960,165.3C1013.3,181,1067,171,1120,154.7C1173.3,139,1227,117,1280,101.3C1333.3,85,1387,75,1413,69.3L1440,64L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
+        </path>
+    </svg>
     <!-- body -->
     <div class="container">
         <div class="row">
@@ -114,7 +121,7 @@
     <!-- footer -->
     <div class="container">
         <!-- mail -->
-        
+
         <!-- copyright -->
         <div class="row align-items-end footer">
             <div class="col text-end pb-3">Copyright &copy; 2021 - Debarghya Chaudhury &reg;</div>
